css/bloglist.css
#bloglist {
    display: grid;
    gap: calc(var(--spacing));

    grid-template-rows: 4fr;
    grid-template-columns: 100%;
    @media (min-width: 768px) {
	grid-template-columns: 3fr 1fr;
    }

}

.taglist-wrapper {
    min-width: 20ch;
    /* grid-column-start: 2; */
    grid-row: 3 / 4;
    @media (min-width: 768px) {
	grid-column: 2 / 3;
	grid-row: 2 / 3;
    }

    /* Hide header on mobile to save space */
    &  h2 {
	display: none;
	@media (min-width: 768px) {
	    display: inline-block;
	}
    }

    & > .taglist {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	gap: 0.5em;

	list-style: none;
	padding: 0;

    }
}

